@@ -19,7 +19,7 @@
  '(auto-revert-check-vc-info t)
  '(bbdb-complete-name-allow-cycling t)
  '(bbdb-dwim-net-address-allow-redundancy t)
- '(blink-cursor-mode nil)
+ '(blink-cursor-mode nil nil (frame))
  '(browse-url-netscape-program "mozilla-firefox")
  '(c++-font-lock-extra-types (quote ("Q[a-zA-Z]*" "uint" "ulong" "string")))
  '(c-default-style (quote ((java-mode . "java") (other . "personal"))))
@@ -133,6 +133,7 @@
  '(parens-require-spaces nil)
  '(pcomplete-autolist t)
  '(pcomplete-cycle-completions nil)
+ '(planner-use-other-window nil)
  '(preview-default-option-list (quote ("displaymath" "floats" "graphics" "textmath" "footnotes")))
  '(prolog-system (quote swi))
  '(recentf-exclude (quote (":")))
@@ -140,7 +141,7 @@
  '(recentf-save-file "~/.emacs-recentf")
  '(reftex-extra-bindings nil)
  '(reftex-index-follow-mode t)
- '(reftex-plug-into-AUCTeX t t)
+ '(reftex-plug-into-AUCTeX t)
  '(reftex-toc-follow-mode t)
  '(save-place-limit 100)
  '(sawfish-extra-keyword-list (quote ("add-frame-style" "call-after-load" "call-after-property-changed" "call-after-state-changed" "custom-set-property" "define" "define-structure" "export" "open")))
