@@ -1,3 +1,8 @@
+2005-04-18  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs-cust.el:
+	(custom-set-variables): don't use another window for planner
+
 2005-04-17  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* config/planner-config.el:
